--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500;600&display=swap");
+
 * {
 	margin: 0;
 	padding: 0;
@@ -6,72 +8,84 @@
 
 body {
 	background: #d3cce3;
-	background: -webkit-linear-gradient(
-		to right,
-		#e9e4f0,
-		#d3cce3
-	); 
-	background: linear-gradient(
-		to right,
-		#e9e4f0,
-		#d3cce3
-	);
+	background: -webkit-linear-gradient(to right, #e9e4f0, #d3cce3);
+	background: linear-gradient(to right, #e9e4f0, #d3cce3);
 }
 
 .card {
-    width: 500px;
-    margin: 10rem auto;
-    border-radius: 10px;
-    background: #d3cce3;
-	background: -webkit-linear-gradient(
-		to right,
-        #d3cce3,
-		#e9e4f0
-		
-	); 
-	background: linear-gradient(
-		to right,
-        #d3cce3,
-		#e9e4f0
-		
-	);
-}
-
-.cardMain {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+	width: 40%;
+	margin: 10rem auto;
+	border-radius: 10px;
+	background: #d3cce3;
+	background: -webkit-linear-gradient(to right, #d3cce3, #e9e4f0);
+	background: linear-gradient(to right, #d3cce3, #e9e4f0);
+    background-repeat: no-repeat;
     
 }
 
-#inputQr{
-    width: 90%;
-    padding: .5rem 1rem;
-    margin: 10px auto;
-    background-color: transparent;
-    outline: none;
-    color: #1d074f;
-    border: 2px solid  #8d63e6;
-    border-radius: .5rem;
-    font-size: 1.5rem;
-}
-#inputQr::placeholder{
-    color: #8d63e6;
+.cardMain {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
-
-
-#generateCard{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
+#inputQr {
+	width: 90%;
+	padding: 0.5rem 1rem;
+	margin: 10px auto;
+	background-color: transparent;
+	outline: none;
+	color: #1d074f;
+	border: 2px solid #8d63e6;
+	border-radius: 0.5rem;
+	font-size: 1.5rem;
+	font-family: "JetBrains Mono", monospace;
+}
+#inputQr::placeholder {
+	color: #8d63e6;
+	font-family: "JetBrains Mono", monospace;
+    width: 100%;
 }
 
-[type="search"]::-webkit-search-cancel-button {
-    -webkit-appearance: none;
-    color: #fff;
-    width: 20px;
-    height: 20px;
-  }
+#generateCard {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 1rem;
+}
+
+@media (max-width: 1300px) {
+	.card {
+		width: 50%;
+	}
+}
+@media (max-width: 1035px) {
+	.card {
+		width: 60%;
+	}
+}
+@media (max-width: 875px) {
+	.card {
+		width: 70%;
+	}
+	#inputQr::placeholder {
+		font-size: 1.1rem;
+		font-family: Arial, Helvetica, sans-serif;
+	}
+}
+@media (max-width: 576px) {
+	.card {
+		width: 90%;
+	}
+	#generateImg {
+		width: 150px;
+	}
+    #inputQr{
+        padding: .2rem .5rem;
+    }
+    #inputQr::placeholder {
+		font-size: 1rem;
+        
+	}
+}
